--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.4",
     "expo": "~48.0.11",
+    "expo-font": "~11.1.1",
+    "expo-splash-screen": "^0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-native": "0.71.6",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-web": "^0.18.12"
   },
   "devDependencies": {
