--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^4.8.0",
     "react-native": "0.71.6",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-web": "^0.18.12"
+    "react-native-web": "^0.18.12",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
